# cmd/api/handler/customers/customers.go
@@ -29,7 +29,7 @@ func NewCustomersHandler(customerApp ports.CustomersApp, utils utils.Sessions) C
 // @Description  Registrar un nuevo cliente en el sistema con los datos proporcionados. Valida campos obligatorios como nombre, teléfono y contraseña.
 // @Tags         Customers
 // @Accept       json
-// @Param        customer  body  dto.RegisterCustomer  true  "Datos del cliente"
+// @Param        customer  body  customers.RegisterCustomer  true  "Datos del cliente"
 // @Success      201  {string}  string  "customer successfully registered"
 // @Failure      400 {string} string "Se retorna cuando hay un campo que no cumple con los requisitos o directamente el body se envía vacío."
 // @Failure      500 {string} string "Se retorna cuando ocurre un error inexperado en el servidor."
